[project]
name = "bitcaster"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sax", email = "s.apostolico@gmail.com"},
]
dependencies = [
    "celery>=5.3.6",
    "circus>=0.18.0",
    "django-admin-extra-buttons>=1.5.8",
    "django-adminactions>=2.3.0",
    "django-adminfilters>=2.4.3",
    "django-anymail[all]>=10.3",
    "django-bitfield>=2.2.0",
    "django-celery-beat>=2.6.0",
    "django-constance>=3.1.0",
    "django-csp>=3.8",
    "django-debug-toolbar>=4.3.0",
    "django-environ>=0.11.2",
    "django-filter>=24.2",
    "django-flags>=5.0.13",
    "django-formtools>=2.5.1",
    "django-redis>=5.4.0",
    "django-regex>=0.5.0",
    "django-reversion>=5.0.12",
    "django-select2>=8.1.2",
    "django-strategy-field>=3.1.0",
    "django-stubs>=4.2.7",
    "django-svelte-jsoneditor>=0.4.2",
    "django-timezone-field>=6.1.0",
    "django-tinymce>=4.0.0",
    "django-treebeard>=4.7.1",
    "django-url-filter>=0.3.15",
    "django>=5.0.3",
    "djangorestframework>=3.15.0",
    "drf-extensions>=0.7.1",
    "drf-nested-routers>=0.93.5",
    "drf-spectacular-sidecar>=2024.4.1",
    "drf-spectacular>=0.27.1",
    "htmlmin>=0.1.12",
    "jmespath>=1.0.1",
    "mailjet-rest>=1.3.4",
    "phonenumbers>=8.13.36",
    "pillow>=10.2.0",
    "premailer>=3.10.0",
    "psycopg2-binary>=2.9.9",
    "py-vapid>=1.9.0",
    "pygments>=2.17.2",
    "python-gitlab>=4.4.0",
    "qrcode>=7.4.2",
    "requests>=2.31.0",
    "responses>=0.25.0",
    "sentry-sdk>=1.43.0",
    "slack-notifications>=0.2.2",
    "slack-sdk>=3.27.1",
    "social-auth-app-django>=5.4.0",
    "social-auth-core>=4.5.3",
    "twilio>=9.0.4",
    "user-agents>=2.2.0",
    "uwsgi>=2.0.25.1",
    "transifex-python>=3.5.0",
    "django-taggit>=5.0.1",
    "django-storages[azure,dropbox,google,s3]>=1.14.3",
    "apache-libcloud>=3.8.0",
    "python-magic>=0.4.27",
    "django-concurrency>=2.5",
    "httpagentparser>=1.9.5",
    "django-push-notifications>=3.1.0",
    "pywebpush>=2.0.0",
    "django-markdownify>=0.9.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "OS4D"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.3.0",
    "bump2version>=1.0.1",
    "django-csp>=3.8",
    "django-extensions>=3.2.3",
    "django-stubs-ext>=4.2.7",
    "django-stubs>=4.2.7",
    "django-webtest>=1.9.11",
    "factory-boy>=3.3.0",
    "flake8-html>=0.4.3",
    "flake8>=7.0.0",
    "freezegun>=1.4.0",
    "isort>=5.13.2",
    "mkdocs-ezlinks-plugin>=0.1.14",
    "mkdocs-material>=9.5.15",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "mkdocs>=1.5.3",
    "mkdocstrings[python]>=0.24.1",
    "mypy>=1.9.0",
    "pdbpp>=0.10.3",
    "pre-commit>=3.7.0",
    "pymdown-extensions>=10.7.1",
    "pyquery>=2.0.0",
    "pytest-celery>=0.0.0",
    "pytest-coverage>=0.0",
    "pytest-django>=4.8.0",
    "pytest-echo>=1.7.3",
    "pytest-selenium>=4.1.0",
    "pytest-xdist[psutil]>=3.6.1",
    "pytest>=8.1.1",
    "pyupgrade>=3.15.1",
    "selenium>=4.18.1",
    "types-freezegun>=1.1.10",
    "types-python-dateutil>=2.9.0.20240316",
    "types-redis>=4.6.0.20240311",
    "types-requests>=2.31.0.20240311",
    "types-markdown>=3.6.0.20240316",
    "mypy-boto3>=1.34.105",
    "mypy-boto3-sns>=1.34.44",
    "types-s3transfer>=0.10.1",
    "pytest-socket>=0.7.0",
    "boto3-stubs>=1.34.105",
    "pytest-factoryboy>=2.7.0",
]
[tool.isort]
profile = "black"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | snapshots
)/
'''

[tool.pdm.scripts]
coverage = "pytest tests/ -n auto --create-db -vv --cov"
