[project]
name = "bitcaster"
version = "2.0.0"
description = ""
authors = [
    {name = "Bitcaster Team", email = "info@bitcaster.io"},
]
dependencies = [
    "apache-libcloud>=3.8.0",
    "celery>=5.3.6",
    "circus>=0.18.0",
    "django-admin-extra-buttons>=1.5.8",
    "django-adminactions>=2.3.0",
    "django-adminfilters>=2.4.3",
    "django-anymail[all]>=10.3",
    "django-bitfield>=2.2.0",
    "django-celery-beat>=2.6.0",
    "django-concurrency>=2.5",
    "django-constance>=3.1.0",
    "django-csp>=3.8",
    "django-debug-toolbar>=4.3.0",
    "django-environ>=0.11.2",
    "django-filter>=24.2",
    "django-flags>=5.0.13",
    "django-formtools>=2.5.1",
    "django-markdownify>=0.9.5",
    "django-push-notifications>=3.1.0",
    "django-redis>=5.4.0",
    "django-regex>=0.5.0",
    "django-reversion>=5.0.12",
    "django-select2>=8.1.2",
    "django-storages[azure,dropbox,google,s3]>=1.14.3",
    "django-strategy-field>=3.1.0",
    "django-stubs>=4.2.7",
    "django-svelte-jsoneditor>=0.4.2",
    "django-taggit>=5.0.1",
    "django-timezone-field>=6.1.0",
    "django-tinymce>=4.0.0",
#    "django-treebeard>=4.7.1",
#    "django-url-filter>=0.3.15",
    "django>=5.1",
    "djangorestframework>=3.15.0",
    "drf-extensions>=0.7.1",
    "drf-nested-routers>=0.93.5",
    "drf-spectacular-sidecar>=2024.4.1",
    "drf-spectacular>=0.27.1",
    "flower>=2.0.1",
    "htmlmin>=0.1.12",
    "httpagentparser>=1.9.5",
    "jmespath>=1.0.1",
    "mailjet-rest>=1.3.4",
    "phonenumbers>=8.13.36",
    "pillow>=10.2.0",
    "premailer>=3.10.0",
    "psycopg2-binary>=2.9.9",
    "py-vapid>=1.9.0",
    "pygments>=2.17.2",
    "python-gitlab>=4.4.0",
    "python-magic>=0.4.27",
    "pytricia>=1.0.2",
    "pywebpush>=2.0.0",
    "qrcode>=7.4.2",
    "requests>=2.31.0",
    "responses>=0.25.0",
    "sentry-sdk>=1.43.0",
    "setuptools>=75.1.0",
    "slack-notifications>=0.2.2",
    "slack-sdk>=3.27.1",
    "social-auth-app-django>=5.4.0",
    "social-auth-core>=4.5.3",
    "transifex-python>=3.5.0",
    "twilio>=9.0.4",
    "user-agents>=2.2.0",
    "uwsgi>=2.0.25.1",
]
requires-python = "==3.12.6"
readme = "README.md"
license = {text = "OS4D"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ['src/bitcaster']

[tool.pdm]
distribution = true
#plugins = [
#    "pdm-sbom",
#]

[tools.pdm.audit_plugin.hook_verbose]

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.3.0",
    "boto3-stubs>=1.34.105",
    "bump2version>=1.0.1",
    "django-debug-permissions>=1.0.0",
    "django-extensions>=3.2.3",
    "django-stubs-ext>=4.2.7",
    "django-webtest>=1.9.11",
    "factory-boy>=3.3.0",
    "flake8-html>=0.4.3",
    "flake8>=7.0.0",
    "freezegun>=1.4.0",
    "isort>=5.13.2",
    "mypy-boto3-sns>=1.34.44",
    "mypy-boto3>=1.34.105",
    "mypy>=1.9.0",
    "pdbpp>=0.10.3",
    "pre-commit>=3.7.0",
    "pyfakefs>=5.6.0",
    "pyquery>=2.0.0",
    "pytest-celery>=0.0.0",
    "pytest-coverage>=0.0",
    "pytest-django>=4.8.0",
    "pytest-echo>=1.7.3",
    "pytest-ekstazi>=1.0.0",
    "pytest-factoryboy>=2.7.0",
    "pytest-localftpserver>=1.3.2",
    "pytest-repeat>=0.9.3",
    "pytest-selenium>=4.1.0",
    "pytest-socket>=0.7.0",
    "pytest-testmon>=2.1.1",
    "pytest-xdist[psutil]>=3.6.1",
    "pytest>=8.1.1",
    "pyupgrade>=3.15.1",
    "selenium>=4.18.1",
    "semantic-version>=2.8.5",
    "tox-pdm>=0.7.2",
    "tox>=4.18.1",
    "types-freezegun>=1.1.10",
    "types-markdown>=3.6.0.20240316",
    "types-python-dateutil>=2.9.0.20240316",
    "types-redis>=4.6.0.20240311",
    "types-requests>=2.31.0.20240311",
    "types-s3transfer>=0.10.1",
    "pip-audit>=2.7.3",
]
docs = [
    "cairosvg>=2.7.1",
    "markupsafe>=2.1.5",
    "mdx-gh-links>=0.4",
    "mkdocs-autolinks-plugin>=0.7.1",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocs-click>=0.8.1",
    "mkdocs-ezglossary-plugin>=1.6.10",
    "mkdocs-ezlinks-plugin>=0.1.14",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-link-marker>=0.1.3",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocs-material>=9.5.15",
    "mkdocs-simple-hooks>=0.1.5",
    "mkdocs>=1.5.3",
    "mkdocstrings[python]>=0.24.1",
    "pymdown-extensions>=10.7.1",
    "mkdocs-embed-external-markdown>=3.0.2",
    "mkdocs-include-markdown-plugin>=6.2.2",
    "mkdocs-redirects>=1.2.1",
    "mkdocs-minify-plugin>=0.8.0",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | snapshots
)/
'''


[tool.pdm.scripts]
coverage = "pytest tests/ -n auto --create-db -vv --cov"
lint = "pre-commit run --all-files"
